--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.freemarker.expose-session-attributes=true
 spring.freemarker.content-type=text/html;charset=UTF-8
 
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:d:/upload
+
+# JavaMailSender ÓÊ¼ş·¢ËÍµÄÅäÖÃ
+spring.mail.host=smtp.163.com
+spring.mail.username=LerDerWebSite@163.com
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
