--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-#设置端口号
+#\u8BBE\u7F6E\u7AEF\u53E3\u53F7
 server.port=8080
-#启动热部署
+#\u542F\u52A8\u70ED\u90E8\u7F72
 spring.devtools.livereload.enabled=true
+spring.devtools.livereload.port=35729
 
 spring.datasource.url=jdbc:mysql://localhost:3306/nanzhao2018?characterEncoding=utf-8
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -18,10 +19,10 @@ spring.freemarker.content-type=text/html;charset=UTF-8
 
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:d:/upload
 
-# JavaMailSender 邮件发送的配置
+# JavaMailSender \u90AE\u4EF6\u53D1\u9001\u7684\u914D\u7F6E
 spring.mail.host=smtp.163.com
 spring.mail.username=LerDerWebSite@163.com
-spring.mail.password=password
+spring.mail.password=liuwei663218
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
