修改pom文件,并加入jib

--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>0.9.0</version>
+				<configuration>
+					<to>
+						<image>registry.hub.docker.com/my-docker-id/my-app</image>
+					</to>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
